--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,6 @@ jobs:
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "YOUR APP's NAME" #Must be unique in Heroku
-          heroku_email: "YOUR EMAIL"
-          healthcheck: "https://[YOUR APP's NAME].herokuapp.com/health"
+          heroku_app_name: "goanimatewrapperlol" #Must be unique in Heroku
+          heroku_email: "dan30654@gmail.com"
+          healthcheck: "https://goanimatewrapperlol.herokuapp.com/health"
